[gd_scene load_steps=26 format=3 uid="uid://dilver32v2354"]

[ext_resource type="Script" uid="uid://c40sexhd2x3jt" path="res://addons/SolanaSDK/Demos/7.HighscoreDemo/leaderboard_system.gd" id="1_7oio1"]
[ext_resource type="Script" uid="uid://cealb67narqy5" path="res://addons/SolanaSDK/Demos/7.HighscoreDemo/game_manager.gd" id="1_dp1gx"]
[ext_resource type="Texture2D" uid="uid://cye2pbirpht4u" path="res://addons/SolanaSDK/Textures/Buttons/b_green_pressed.PNG" id="6_644p6"]
[ext_resource type="Texture2D" uid="uid://d4kauar2qc15y" path="res://addons/SolanaSDK/Textures/Buttons/b_green_hover.PNG" id="7_ltsf1"]
[ext_resource type="Script" uid="uid://cs30la02klrj4" path="res://addons/SolanaSDK/Demos/7.HighscoreDemo/leaderboard_entry.gd" id="7_s7r5l"]
[ext_resource type="PackedScene" uid="uid://b0iqm3erodaqo" path="res://addons/SolanaSDK/Demos/7.HighscoreDemo/LeaderboardEntry.tscn" id="8_axrc3"]
[ext_resource type="Texture2D" uid="uid://et1kvxp5bprg" path="res://addons/SolanaSDK/Textures/Buttons/b_inactive.PNG" id="8_njf0e"]
[ext_resource type="PackedScene" uid="uid://kb5sk8ykb617" path="res://addons/SolanaSDK/Scripts/ThirdPartyTools/SOAR/SoarProgram.tscn" id="12_mgy1w"]
[ext_resource type="Texture2D" uid="uid://dnqcw4msg2uow" path="res://addons/SolanaSDK/Textures/Buttons/b_orange_pressed.PNG" id="13_ow7hr"]
[ext_resource type="PackedScene" uid="uid://blmw46he11fxs" path="res://addons/SolanaSDK/Scripts/Managers/TransactionManager/TransactionOverlayUI.tscn" id="14_ersxp"]
[ext_resource type="Texture2D" uid="uid://5erj253phx4s" path="res://addons/SolanaSDK/Textures/Buttons/b_orange_hover.PNG" id="14_ik6bq"]
[ext_resource type="Script" uid="uid://b5nw7fquhlcbl" path="res://addons/SolanaSDK/Demos/_LoginDemo/scene_loader.gd" id="15_ilu4p"]
[ext_resource type="Script" uid="uid://rodqxxqhixqe" path="res://addons/SolanaSDK/Demos/_LoginDemo/scene_change_button.gd" id="15_py4m4"]


[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7pi32"]
bg_color = Color(0.937255, 0.682353, 0.341176, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0xvq3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_avkrb"]
texture = ExtResource("8_njf0e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ryjmu"]
texture = ExtResource("14_ik6bq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f2tob"]
texture = ExtResource("13_ow7hr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bmrj2"]
texture = ExtResource("13_ow7hr")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b04j3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m8hje"]
texture = ExtResource("8_njf0e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_efb31"]
texture = ExtResource("7_ltsf1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bio0t"]
texture = ExtResource("6_644p6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hadpj"]
texture = ExtResource("6_644p6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3oyeh"]
bg_color = Color(0.360524, 0.371319, 0.458671, 1)

[node name="HighscoreDemo" type="Control" node_paths=PackedStringArray("start_game_button", "score_label", "submit_score_button", "leaderboard_button", "leaderboard_system")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dp1gx")
start_game_button = NodePath("StartingScreen/Content/VBoxContainer/StartButton")
score_label = NodePath("PlayScreen/score")
submit_score_button = NodePath("PlayScreen/SubmitButton")
leaderboard_button = NodePath("StartingScreen/Content/VBoxContainer/LeaderboardButton")
leaderboard_system = NodePath("LeaderboardScreen")
game_authority_path = "res://addons/SolanaSDK/Demos/6.HighscoreDemo/DgjZTqLaxmhtg1eypxpLfDfQw3whi5Wg45pD4oSJb8Az.json"

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7pi32")

[node name="StartingScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnButton" type="Button" parent="StartingScreen" node_paths=PackedStringArray("scene_loader")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -187.0
offset_top = 12.0
offset_right = -18.0
offset_bottom = 89.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_0xvq3")
theme_override_styles/disabled = SubResource("StyleBoxTexture_avkrb")
theme_override_styles/hover = SubResource("StyleBoxTexture_ryjmu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_f2tob")
theme_override_styles/normal = SubResource("StyleBoxTexture_bmrj2")
text = "RETURN"
script = ExtResource("15_py4m4")
path_to_scene = "res://addons/SolanaSDK/Demos/_DemoSelectScene/DemoSelectScene.tscn"
scene_loader = NodePath("../../SceneLoader")

[node name="Content" type="MarginContainer" parent="StartingScreen"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="StartingScreen/Content"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Intro" type="Label" parent="StartingScreen/Content/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Onchain Highscores"
horizontal_alignment = 1
vertical_alignment = 1

[node name="description" type="Label" parent="StartingScreen/Content/VBoxContainer"]
custom_minimum_size = Vector2(800, 120)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "This demo is a carcass for setting players highscores into onchain leaderboard. Start by initializing an account. Then a random number will be generated as your score. You will be able to submit it into the leaderboard. Caution: Devnet only!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="StartingScreen/Content/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_b04j3")
theme_override_styles/disabled = SubResource("StyleBoxTexture_m8hje")
theme_override_styles/hover = SubResource("StyleBoxTexture_efb31")
theme_override_styles/pressed = SubResource("StyleBoxTexture_bio0t")
theme_override_styles/normal = SubResource("StyleBoxTexture_hadpj")
text = "Start game"

[node name="LeaderboardButton" type="Button" parent="StartingScreen/Content/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_b04j3")
theme_override_styles/disabled = SubResource("StyleBoxTexture_m8hje")
theme_override_styles/hover = SubResource("StyleBoxTexture_efb31")
theme_override_styles/pressed = SubResource("StyleBoxTexture_bio0t")
theme_override_styles/normal = SubResource("StyleBoxTexture_hadpj")
text = "Leaderboard"

[node name="PlayScreen" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Intro" type="Label" parent="PlayScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 85
text = "Well Played!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="description" type="Label" parent="PlayScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "Your score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="PlayScreen"]
layout_mode = 2
theme_override_colors/font_color = Color(0.51782, 1, 0.722702, 1)
theme_override_colors/font_shadow_color = Color(0.126012, 0.537816, 0.699722, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 35
theme_override_constants/shadow_outline_size = 55
theme_override_font_sizes/font_size = 118
text = "420"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubmitButton" type="Button" parent="PlayScreen"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_b04j3")
theme_override_styles/disabled = SubResource("StyleBoxTexture_m8hje")
theme_override_styles/hover = SubResource("StyleBoxTexture_efb31")
theme_override_styles/pressed = SubResource("StyleBoxTexture_bio0t")
theme_override_styles/normal = SubResource("StyleBoxTexture_hadpj")
text = "Submit Score"

[node name="LeaderboardScreen" type="Control" parent="." node_paths=PackedStringArray("soar_program", "scorebox", "back_button", "best_score", "start_screen")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7oio1")
soar_program = NodePath("../SoarProgram")
leaderboard_entry = ExtResource("8_axrc3")
scorebox = NodePath("Content/VBoxContainer/Main/Leaderboard/VBoxContainer/ScrollContainer/VBoxContainer")
back_button = NodePath("Content/VBoxContainer/BackButton")
best_score = NodePath("Content/VBoxContainer/Main/Scores/score")
start_screen = NodePath("../StartingScreen")

[node name="Content" type="MarginContainer" parent="LeaderboardScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.5
offset_top = -360.0
offset_right = 374.5
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="LeaderboardScreen/Content"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Intro" type="Label" parent="LeaderboardScreen/Content/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Leaderboard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main" type="HBoxContainer" parent="LeaderboardScreen/Content/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Leaderboard" type="PanelContainer" parent="LeaderboardScreen/Content/VBoxContainer/Main"]
custom_minimum_size = Vector2(450, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LeaderboardScreen/Content/VBoxContainer/Main/Leaderboard"]
layout_mode = 2

[node name="ExampleScore" type="PanelContainer" parent="LeaderboardScreen/Content/VBoxContainer/Main/Leaderboard/VBoxContainer" node_paths=PackedStringArray("id", "nickname", "score")]
custom_minimum_size = Vector2(450, 50)
layout_mode = 2
script = ExtResource("7_s7r5l")
id = NodePath("MarginContainer/HBoxContainer/CenterContainer/Id")
nickname = NodePath("MarginContainer/HBoxContainer/MarginContainer/username")
score = NodePath("MarginContainer/HBoxContainer/Centerontainer/Score")

[node name="MarginContainer" type="MarginContainer" parent="LeaderboardScreen/Content/VBoxContainer/Main/Leaderboard/VBoxContainer/ExampleScore"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = -15

[node name="HBoxContainer" type="HBoxContainer" parent="LeaderboardScreen/Content/VBoxContainer/Main/Leaderboard/VBoxContainer/ExampleScore/MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="LeaderboardScreen/Content/VBoxContainer/Main/Leaderboard/VBoxContainer/ExampleScore/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Id" type="Label" parent="LeaderboardScreen/Content/VBoxContainer/Main/Leaderboard/VBoxContainer/ExampleScore/MarginContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "#"

[node name="MarginContainer" type="MarginContainer" parent="LeaderboardScreen/Content/VBoxContainer/Main/Leaderboard/VBoxContainer/ExampleScore/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="username" type="Label" parent="LeaderboardScreen/Content/VBoxContainer/Main/Leaderboard/VBoxContainer/ExampleScore/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "USERNAME"

[node name="Centerontainer" type="CenterContainer" parent="LeaderboardScreen/Content/VBoxContainer/Main/Leaderboard/VBoxContainer/ExampleScore/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="Score" type="Label" parent="LeaderboardScreen/Content/VBoxContainer/Main/Leaderboard/VBoxContainer/ExampleScore/MarginContainer/HBoxContainer/Centerontainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "SCORE"

[node name="ScrollContainer" type="ScrollContainer" parent="LeaderboardScreen/Content/VBoxContainer/Main/Leaderboard/VBoxContainer"]
custom_minimum_size = Vector2(450, 330)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LeaderboardScreen/Content/VBoxContainer/Main/Leaderboard/VBoxContainer/ScrollContainer"]
layout_mode = 2
alignment = 1

[node name="Scores" type="VBoxContainer" parent="LeaderboardScreen/Content/VBoxContainer/Main"]
layout_mode = 2

[node name="TopScore" type="Label" parent="LeaderboardScreen/Content/VBoxContainer/Main/Scores"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Your top score"
horizontal_alignment = 1

[node name="score" type="Label" parent="LeaderboardScreen/Content/VBoxContainer/Main/Scores"]
layout_mode = 2
theme_override_font_sizes/font_size = 118
text = "420"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="LeaderboardScreen/Content/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_0xvq3")
theme_override_styles/disabled = SubResource("StyleBoxTexture_avkrb")
theme_override_styles/hover = SubResource("StyleBoxTexture_ryjmu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_f2tob")
theme_override_styles/normal = SubResource("StyleBoxTexture_bmrj2")
text = "GO BACK"

[node name="SoarProgram" parent="." instance=ExtResource("12_mgy1w")]

[node name="TransactionOverlayUI" parent="." instance=ExtResource("14_ersxp")]

[node name="SceneLoader" type="Node" parent="."]
script = ExtResource("15_ilu4p")

[node name="LoadingCanvas" type="Panel" parent="SceneLoader"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3oyeh")

[node name="Label" type="Label" parent="SceneLoader/LoadingCanvas"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Loading, please wait..."

[connection signal="pressed" from="StartingScreen/ReturnButton" to="StartingScreen/ReturnButton" method="_on_pressed"]
[connection signal="pressed" from="LeaderboardScreen/Content/VBoxContainer/BackButton" to="LeaderboardScreen/Content/VBoxContainer/BackButton" method="_on_pressed"]
